# clap-cargo

./: .clog.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml  release.toml
.github/: settings.yml
.github/workflows/: audit.yml  ci.yml  rust-next.yml
examples/: flags.rs
src/: features.rs  lib.rs  manifest.rs  style.rs  workspace.rs
tests/fixtures/mixed_ws/: Cargo.toml
tests/fixtures/mixed_ws/c/: Cargo.toml
tests/fixtures/pure_ws/a/: Cargo.toml
tests/fixtures/pure_ws/b/: Cargo.toml
tests/fixtures/pure_ws/c/: Cargo.toml
tests/fixtures/simple/: Cargo.toml
