[package]
name = "clap-cargo"
version = "0.8.0"
description = "Re-usable CLI flags for `cargo` plugins"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/clap-cargo"
documentation = "https://docs.rs/clap-cargo"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
features = [ "cargo_metadata" ]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/clap-cargo/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]

[dependencies]
clap = { version = "3.0", default-features = false, features = ["std", "derive"] }
cargo_metadata = { version = "0.14", optional = true }
doc-comment = "0.3"
