[package]
name = "clap-cargo"
version = "0.9.0"
description = "Re-usable CLI flags for `cargo` plugins"
authors = ["Ed Page <eopage@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/clap-cargo"
documentation = "https://docs.rs/clap-cargo"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
rust-version = "1.56.1"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
features = [ "cargo_metadata" ]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/clap-cargo/compare/{{tag_name}}...HEAD", exactly=1},
  {file="README.md", search="clap-cargo = \"[0-9]+.[0-9]+.[0-9]+\"", replace="clap-cargo = \"{{version}}\"", exactly=1},
]

[features]

[dependencies]
clap = { version = "3.0", default-features = false, features = ["std", "derive"] }
cargo_metadata = { version = "0.15", optional = true }
doc-comment = "0.3"
